--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-weatherio/secrets.py
+weatherio/secr
+ets.py
 
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
